# aspect

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: build.yml  py-build.yml  react-build.yml
backend/: pyproject.toml
backend/resources/: schema.sql
backend/src/: aspect.py
backend/src/db/: db_connector.py
backend/src/db/entity/: entity.py  project.py  template.py
backend/src/db/service/: entity_service.py  project_service.py  template_service.py
backend/src/templates/: index.html  upload.html
backend/tests/: test_aspect.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: AspectClient.ts
frontend/src/api/types/: types.ts
frontend/src/components/button/: Button.css  Button.tsx  ButtonTypes.ts
frontend/src/components/config-box/: ConfigBox.css  ConfigBox.tsx
frontend/src/components/error-message/: ErrorMessage.css  ErrorMessage.tsx
frontend/src/components/input/label/: Label.css  Label.tsx
frontend/src/components/input/select/: Select.css  Select.tsx
frontend/src/components/input/text/: TextInput.css  TextInput.tsx
frontend/src/components/navbar/: Navbar.css  Navbar.tsx
frontend/src/components/sidebar/: Sidebar.css  Sidebar.tsx
frontend/src/components/video-grid/: VideoGrid.tsx
frontend/src/pages/home/: Home.css  Home.tsx
frontend/src/pages/projects/editor/: ProjectEditorPage.css  ProjectEditorPage.tsx
src/: aspect.py
src/templates/: index.html  upload.html
tests/: test_aspect.py
